# NFLogger

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
ci/: Brewfile  README.md  ci.yaml  ios.py  linux.py  linux.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  osx.py  osx.sh  requirements.txt
include/NFLogger/: LogInfo.h  LogInfoHandler.h  LogSink.h  Logger.h  StdStreamSink.h
source/: CMakeLists.txt  LogInfo.cpp  LogSink.cpp  StdStreamSink.cpp
source/tests/: CMakeLists.txt  NFLoggerTest.cpp
